* (Re)-added gui for fppkg, only works with fpc 3.1.1
 SVN 54510@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1406,6 +1406,50 @@ components/fpdebug/test/testhelperclasses.pas svneol=native#text/pascal
 components/fpdebug/test/testmemmanager.pas svneol=native#text/pascal
 components/fpdebug/test/testpascalparser.pas svneol=native#text/pascal
 components/fpdebug/test/testtypeinfo.pas svneol=native#text/pascal
+components/fppkg/images/archive.png -text svneol=unset#image/png
+components/fppkg/images/broken.png -text svneol=unset#image/png
+components/fppkg/images/build.png -text svneol=unset#image/png
+components/fppkg/images/clean.png -text svneol=unset#image/png
+components/fppkg/images/compile.png -text svneol=unset#image/png
+components/fppkg/images/download.png -text svneol=unset#image/png
+components/fppkg/images/fp32.ico -text svneol=unset#image/x-icon
+components/fppkg/images/freepascal_pkg.png -text svneol=unset#image/png
+components/fppkg/images/install.png -text svneol=unset#image/png
+components/fppkg/images/lazarus_pkg.png -text svneol=unset#image/png
+components/fppkg/images/package_manager.png -text svneol=unset#image/png
+components/fppkg/images/update.png -text svneol=unset#image/png
+components/fppkg/languages/fppkg_const.de.po svneol=native#text/plain
+components/fppkg/languages/fppkg_const.fr.po svneol=native#text/plain
+components/fppkg/languages/fppkg_const.hu.po svneol=native#text/plain
+components/fppkg/languages/fppkg_const.it.po svneol=native#text/plain
+components/fppkg/languages/fppkg_const.lt.po svneol=native#text/plain
+components/fppkg/languages/fppkg_const.po svneol=native#text/plain
+components/fppkg/languages/fppkg_const.pt_BR.po svneol=native#text/plain
+components/fppkg/languages/fppkg_const.ru.po svneol=native#text/plain
+components/fppkg/languages/fppkg_const.uk.po svneol=native#text/plain
+components/fppkg/languages/lazarusfppkg.po svneol=native#text/plain
+components/fppkg/readme.txt svneol=native#text/plain
+components/fppkg/src/fppkg_aboutfrm.lfm svneol=native#text/plain
+components/fppkg/src/fppkg_aboutfrm.pas svneol=native#text/plain
+components/fppkg/src/fppkg_const.pas svneol=native#text/plain
+components/fppkg/src/fppkg_details.lfm svneol=native#text/plain
+components/fppkg/src/fppkg_details.pas svneol=native#text/plain
+components/fppkg/src/fppkg_lpk.pas svneol=native#text/plain
+components/fppkg/src/fppkg_mainfrm.lfm svneol=native#text/plain
+components/fppkg/src/fppkg_mainfrm.lrj svneol=native#text/plain
+components/fppkg/src/fppkg_mainfrm.pas svneol=native#text/plain
+components/fppkg/src/fppkg_optionsfrm.lfm svneol=native#text/plain
+components/fppkg/src/fppkg_optionsfrm.pas svneol=native#text/plain
+components/fppkg/src/fppkgpackagemanager.lpk svneol=native#text/plain
+components/fppkg/src/fppkgpackagemanager.pas svneol=native#text/plain
+components/fppkg/src/laz_pkgcommands.pas svneol=native#text/plain
+components/fppkg/src/laz_pkgrepos.pas svneol=native#text/plain
+components/fppkg/src/lazfppkgmanagerintf.pas svneol=native#text/plain
+components/fppkg/standalone/lazarusfppkg.ico -text svneol=unset#image/x-icon
+components/fppkg/standalone/lazarusfppkg.lpi svneol=native#text/plain
+components/fppkg/standalone/lazarusfppkg.lps svneol=native#text/plain
+components/fppkg/standalone/lazarusfppkg.pas svneol=native#text/plain
+components/fppkg/standalone/lazarusfppkg.res -text
 components/fpvectorial/avisocncgcodereader.pas svneol=native#text/plain
 components/fpvectorial/avisocncgcodewriter.pas svneol=native#text/plain
 components/fpvectorial/avisozlib.pas svneol=native#text/plain
