--- a/.gitattributes
+++ b/.gitattributes
@@ -1433,6 +1433,7 @@ components/fppkg/languages/fppkg_const.pt_BR.po svneol=native#text/plain
 components/fppkg/languages/fppkg_const.ru.po svneol=native#text/plain
 components/fppkg/languages/fppkg_const.uk.po svneol=native#text/plain
 components/fppkg/languages/lazarusfppkg.po svneol=native#text/plain
+components/fppkg/languages/lazarusfppkg.ru.po svneol=native#text/plain
 components/fppkg/readme.txt svneol=native#text/plain
 components/fppkg/src/fppkg_aboutfrm.lfm svneol=native#text/plain
 components/fppkg/src/fppkg_aboutfrm.pas svneol=native#text/plain
