--- a/.gitattributes
+++ b/.gitattributes
@@ -8900,6 +8900,7 @@ packager/globallinks/fpcunitconsolerunner-1.lpl svneol=native#text/plain
 packager/globallinks/fpcunitide-0.1.lpl svneol=native#text/plain
 packager/globallinks/fpcunittestrunner-0.1.lpl svneol=native#text/plain
 packager/globallinks/fpdebug-0.lpl svneol=native#text/pascal
+packager/globallinks/fppkgpackagemanager-0.1.lpl svneol=native#text/plain
 packager/globallinks/fpvectorialpkg-0.lpl svneol=native#text/plain
 packager/globallinks/gdbmitestutils-0.1.lpl svneol=native#text/plain
 packager/globallinks/h2paswizard-0.lpl svneol=native#text/plain
@@ -8981,7 +8982,6 @@ packager/globallinks/sparta_toolsapi-0.lpl svneol=native#text/plain
 packager/globallinks/sqldblaz-1.0.2.lpl svneol=native#text/plain
 packager/globallinks/sqlite3laz-0.4.lpl svneol=native#text/plain
 packager/globallinks/sqlitelaz-0.4.lpl svneol=native#text/plain
-packager/globallinks/svnpkg-0.lpl svneol=native#text/plain
 packager/globallinks/synedit-1.lpl svneol=native#text/plain
 packager/globallinks/syneditdsgn-1.lpl svneol=native#text/plain
 packager/globallinks/synuni-1.lpl svneol=native#text/plain
