IDE: darwin: fixed Info.plist short version
 SVN 54584@branches/fixes_1_8

--- a/lazarus.app/Contents/Info.plist
+++ b/lazarus.app/Contents/Info.plist
@@ -148,9 +148,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>Lazarus IDE v1.8.0 RC1</string>
+	<string>1.8.0</string>
 	<key>CFBundleSignature</key>
-	<string>laza</string>
+	<string>1</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>CSResourcesFileMapped</key>
