--- a/.gitattributes
+++ b/.gitattributes
@@ -1448,6 +1448,7 @@ components/fppkg/src/fppkg_optionsfrm.lfm svneol=native#text/plain
 components/fppkg/src/fppkg_optionsfrm.pas svneol=native#text/plain
 components/fppkg/src/fppkgpackagemanager.lpk svneol=native#text/plain
 components/fppkg/src/fppkgpackagemanager.pas svneol=native#text/plain
+components/fppkg/src/fppkgworkerthread.pas svneol=native#text/plain
 components/fppkg/src/laz_pkgcommands.pas svneol=native#text/plain
 components/fppkg/src/laz_pkgrepos.pas svneol=native#text/plain
 components/fppkg/src/lazfppkgmanagerintf.pas svneol=native#text/plain
