codetools: added test for in
 SVN 54678@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -990,6 +990,7 @@ components/codetools/tests/laztests/unitdots.pas svneol=native#text/plain
 components/codetools/tests/moduletests/fdt_basic.pas svneol=native#text/plain
 components/codetools/tests/moduletests/fdt_classhelper.pas svneol=native#text/plain
 components/codetools/tests/moduletests/fdt_classof.pas svneol=native#text/plain
+components/codetools/tests/moduletests/fdt_for_in.pas svneol=native#text/plain
 components/codetools/tests/moduletests/fdt_generics.pas svneol=native#text/plain
 components/codetools/tests/moduletests/fdt_nestedclasses.pas svneol=native#text/plain
 components/codetools/tests/moduletests/fdt_objccategory.pas svneol=native#text/plain
