codetools: tests: test program namespace
 SVN 54742@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -981,6 +981,7 @@ components/codetools/tests/laztests/bug28876.pas svneol=native#text/plain
 components/codetools/tests/laztests/bug28877.pas svneol=native#text/plain
 components/codetools/tests/laztests/delphi_autodereference1.pas svneol=native#text/plain
 components/codetools/tests/laztests/tdefaultproperty1.pas svneol=native#text/plain
+components/codetools/tests/laztests/tprogramdots1.pas svneol=native#text/plain
 components/codetools/tests/laztests/tunit_order_test.pas svneol=native#text/plain
 components/codetools/tests/laztests/tunitdots.main.pas svneol=native#text/plain
 components/codetools/tests/laztests/unit_order_a.pas svneol=native#text/plain
