Qt5: added QBuffer class, needed for saving and loading streams where QIODevice is needed. eg QImage
 SVN 54743@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -7993,6 +7993,8 @@ lcl/interfaces/qt5/cbindings/src/qboxlayout_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qboxlayout_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qbrush_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qbrush_c.h svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qbuffer_c.cpp svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qbuffer_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qbuttongroup_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qbuttongroup_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qbuttongroup_hook.h svneol=native#text/plain
