Opkman: Uninstall feature partially implemented.
 SVN 54906@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3235,19 +3235,21 @@ components/onlinepackagemanager/images/ToolBar/Dis/01[!!-~]Filter.png -text svne
 components/onlinepackagemanager/images/ToolBar/Dis/02[!!-~]Download.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Dis/03[!!-~]Install.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Dis/04[!!-~]Update.png -text svneol=unset#image/png
-components/onlinepackagemanager/images/ToolBar/Dis/05[!!-~]CleanUp.png -text svneol=unset#image/png
-components/onlinepackagemanager/images/ToolBar/Dis/06[!!-~]Repository.png -text svneol=unset#image/png
-components/onlinepackagemanager/images/ToolBar/Dis/07[!!-~]Options.png -text svneol=unset#image/png
-components/onlinepackagemanager/images/ToolBar/Dis/08[!!-~]Help.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/ToolBar/Dis/05[!!-~]Uninstall.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/ToolBar/Dis/06[!!-~]CleanUp.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/ToolBar/Dis/07[!!-~]Repository.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/ToolBar/Dis/08[!!-~]Options.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/ToolBar/Dis/09[!!-~]Help.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Nor/00[!!-~]Refresh.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Nor/01[!!-~]Filter.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Nor/02[!!-~]Download.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Nor/03[!!-~]Install.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/ToolBar/Nor/04[!!-~]Update.png -text svneol=unset#image/png
-components/onlinepackagemanager/images/ToolBar/Nor/05[!!-~]CleanUp.png -text svneol=unset#image/png
-components/onlinepackagemanager/images/ToolBar/Nor/06[!!-~]Repository.png -text svneol=unset#image/png
-components/onlinepackagemanager/images/ToolBar/Nor/07[!!-~]Options.png -text svneol=unset#image/png
-components/onlinepackagemanager/images/ToolBar/Nor/08[!!-~]Help.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/ToolBar/Nor/05[!!-~]Uninstall.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/ToolBar/Nor/06[!!-~]CleanUp.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/ToolBar/Nor/07[!!-~]Repository.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/ToolBar/Nor/08[!!-~]Options.png -text svneol=unset#image/png
+components/onlinepackagemanager/images/ToolBar/Nor/09[!!-~]Help.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/00[!!-~]Repository.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/01[!!-~]PackageName.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/02[!!-~]PackageFile.png -text svneol=unset#image/png
