--- a/.gitattributes
+++ b/.gitattributes
@@ -6897,23 +6897,41 @@ images/menu/menu_saveas.png -text
 images/menu/menu_saveas_150.png -text
 images/menu/menu_saveas_200.png -text
 images/menu/menu_search_files.png -text svneol=unset#image/png
+images/menu/menu_search_files_150.png -text
+images/menu/menu_search_files_200.png -text
 images/menu/menu_search_find.png -text svneol=unset#image/png
+images/menu/menu_search_find_150.png -text
+images/menu/menu_search_find_200.png -text
 images/menu/menu_search_find_next.png -text svneol=unset#image/png
+images/menu/menu_search_find_next_150.png -text
+images/menu/menu_search_find_next_200.png -text
 images/menu/menu_search_find_previous.png -text svneol=unset#image/png
+images/menu/menu_search_find_previous_150.png -text
+images/menu/menu_search_find_previous_200.png -text
 images/menu/menu_search_incremental.png -text
+images/menu/menu_search_incremental_150.png -text
+images/menu/menu_search_incremental_200.png -text
 images/menu/menu_search_jumpback.png -text svneol=unset#image/png
 images/menu/menu_search_jumpforward.png -text svneol=unset#image/png
 images/menu/menu_search_next_bookmark.png -text
 images/menu/menu_search_openfile_atcursor.png -text svneol=unset#image/png
 images/menu/menu_search_previous_bookmark.png -text
 images/menu/menu_search_replace.png -text svneol=unset#image/png
+images/menu/menu_search_replace_150.png -text
+images/menu/menu_search_replace_200.png -text
 images/menu/menu_search_set_bookmark.png -text svneol=unset#image/png
 images/menu/menu_select_all.png -text svneol=unset#image/png
 images/menu/menu_set_free_bookmark.png -text
 images/menu/menu_stepinto.png -text svneol=unset#image/png
+images/menu/menu_stepinto_150.png -text
+images/menu/menu_stepinto_200.png -text
 images/menu/menu_stepinto_instr.png -text svneol=unset#image/png
 images/menu/menu_stepout.png -text svneol=unset#image/png
+images/menu/menu_stepout_150.png -text
+images/menu/menu_stepout_200.png -text
 images/menu/menu_stepover.png -text svneol=unset#image/png
+images/menu/menu_stepover_150.png -text
+images/menu/menu_stepover_200.png -text
 images/menu/menu_stepover_instr.png -text svneol=unset#image/png
 images/menu/menu_stop.png -text svneol=unset#image/png
 images/menu/menu_toggle_bookmark0.png -text
