tools: find_missing_wiki_svnrevisions.pas
 SVN 54940@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -9954,6 +9954,8 @@ tools/debugserver/frmoptions.pp svneol=native#text/pascal
 tools/delete_non_svn_files.pl svneol=native#text/plain
 tools/find_merged_revisions.pas svneol=native#text/plain
 tools/find_missing_lpl_files.sh svneol=native#text/plain
+tools/find_missing_wiki_svnrevisions.lpi svneol=native#text/plain
+tools/find_missing_wiki_svnrevisions.pas svneol=native#text/plain
 tools/getallpofiles.sh -text svneol=native#application/x-sh
 tools/glazres/glazres.ico -text svneol=unset#image/ico
 tools/glazres/glazres.lpi svneol=native#text/plain
