Qt5: cbindings - implemented QMargins, QSurface, QSurfaceFormat, QBackingStore, QScreen and QWindow classes.
 SVN 54941@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -8059,6 +8059,8 @@ lcl/interfaces/qt5/cbindings/src/qapplication_hook_c.cpp svneol=native#text/plai
 lcl/interfaces/qt5/cbindings/src/qapplication_hook_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qauthenticator_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qauthenticator_c.h svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qbackingstore_c.cpp svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qbackingstore_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qbitmap_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qbitmap_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qboxlayout_c.cpp svneol=native#text/plain
@@ -8294,6 +8296,8 @@ lcl/interfaces/qt5/cbindings/src/qmainwindow_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qmainwindow_hook.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qmainwindow_hook_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qmainwindow_hook_c.h svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qmargins_c.cpp svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qmargins_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qmatrix_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qmatrix_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qmdiarea_c.cpp svneol=native#text/plain
@@ -8419,6 +8423,11 @@ lcl/interfaces/qt5/cbindings/src/qregion_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qregion_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qrubberband_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qrubberband_c.h svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qscreen_c.cpp svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qscreen_c.h svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qscreen_hook.h svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qscreen_hook_c.cpp svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qscreen_hook_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qscrollarea_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qscrollarea_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qscrollbar_c.cpp svneol=native#text/plain
@@ -8501,6 +8510,10 @@ lcl/interfaces/qt5/cbindings/src/qstylefactory_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qstylefactory_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qstyleoption_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qstyleoption_c.h svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qsurface_c.cpp svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qsurface_c.h svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qsurfaceformat_c.cpp svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qsurfaceformat_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qsystemtrayicon_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qsystemtrayicon_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qsystemtrayicon_hook.h svneol=native#text/plain
@@ -8669,6 +8682,11 @@ lcl/interfaces/qt5/cbindings/src/qwidget_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qwidget_hook.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qwidget_hook_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qwidget_hook_c.h svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qwindow_c.cpp svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qwindow_c.h svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qwindow_hook.h svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qwindow_hook_c.cpp svneol=native#text/plain
+lcl/interfaces/qt5/cbindings/src/qwindow_hook_c.h svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qx11info_x11_c.cpp svneol=native#text/plain
 lcl/interfaces/qt5/cbindings/src/qx11info_x11_c.h svneol=native#text/plain
 lcl/interfaces/qt5/interfaces.pp svneol=native#text/plain
