--- a/.gitattributes
+++ b/.gitattributes
@@ -5670,6 +5670,10 @@ examples/gridexamples/columneditors/main.pas svneol=native#text/plain
 examples/gridexamples/columneditors/readme.txt svneol=native#text/plain
 examples/gridexamples/columneditors/stringgrideditor.lpi svneol=native#text/plain
 examples/gridexamples/columneditors/stringgrideditor.lpr svneol=native#text/plain
+examples/gridexamples/embedded_images/images.lpi svneol=native#text/plain
+examples/gridexamples/embedded_images/images.lpr svneol=native#text/plain
+examples/gridexamples/embedded_images/imgmain.lfm svneol=native#text/plain
+examples/gridexamples/embedded_images/imgmain.pas svneol=native#text/plain
 examples/gridexamples/grid_semaphor/TSemaphorDBGrid.xpm -text svneol=native#image/x-xpixmap
 examples/gridexamples/grid_semaphor/example/project1.lpi svneol=native#text/plain
 examples/gridexamples/grid_semaphor/example/project1.lpr svneol=native#text/pascal
