--- a/.gitattributes
+++ b/.gitattributes
@@ -10023,9 +10023,11 @@ tools/install/debian_fpc/changelog.Debian svneol=native#text/plain
 tools/install/debian_fpc/control svneol=native#text/plain
 tools/install/debian_fpc/copyright svneol=native#text/plain
 tools/install/debian_fpc/postinst svneol=native#text/plain
+tools/install/debian_lazarus/conffiles svneol=native#text/plain
 tools/install/debian_lazarus/control svneol=native#text/plain
 tools/install/debian_lazarus/controlgtk svneol=native#text/plain
 tools/install/debian_lazarus/controlqt svneol=native#text/plain
+tools/install/debian_lazarus/lintian.overrides svneol=native#text/plain
 tools/install/do_nothing.sh svneol=native#text/plain
 tools/install/file_filter.sh svneol=native#text/plain
 tools/install/freebsd_ports/Makefile svneol=native#text/plain
