IDE: Add component palette icons at 150% and 200% resolution (standard page complete)
 SVN 55123@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -6530,14 +6530,18 @@ images/codetoolsdefines/da_undefineall.png -text svneol=unset#image/png
 images/codetoolsdefines/da_undefinerecurse.png -text svneol=unset#image/png
 images/components/default.png -text svneol=unset#image/png
 images/components/tactionlist.png -text svneol=unset#image/png
+images/components/tactionlist_150.png -text
+images/components/tactionlist_200.png -text
 images/components/tapplicationproperties.png -text svneol=unset#image/png
 images/components/tarrow.png -text svneol=unset#image/png
 images/components/tasyncprocess.png -text
 images/components/tbevel.png -text svneol=unset#image/png
 images/components/tbitbtn.png -text svneol=unset#image/png
+images/components/tbitbtn_150.png -text
 images/components/tbitbtn_200.png -text
 images/components/tbufdataset.png -text svneol=unset#image/png
 images/components/tbutton.png -text svneol=unset#image/png
+images/components/tbutton_150.png -text
 images/components/tbutton_200.png -text
 images/components/tbuttonpanel.png -text svneol=unset#image/png
 images/components/tcalcedit.png -text svneol=unset#image/png
@@ -6545,16 +6549,21 @@ images/components/tcalculatordialog.png -text svneol=unset#image/png
 images/components/tcalendar.png -text svneol=unset#image/png
 images/components/tcalendardialog.png -text svneol=unset#image/png
 images/components/tcheckbox.png -text svneol=unset#image/png
+images/components/tcheckbox_150.png -text
+images/components/tcheckbox_200.png -text
 images/components/tcheckcombobox.png -text svneol=unset#image/png
 images/components/tcheckgroup.png -text svneol=unset#image/png
 images/components/tchecklistbox.png -text svneol=unset#image/png
 images/components/tcolorbox.png -text svneol=unset#image/png
+images/components/tcolorbox_150.png -text
 images/components/tcolorbox_200.png -text
 images/components/tcolorbutton.png -text svneol=unset#image/png
+images/components/tcolorbutton_150.png -text
 images/components/tcolorbutton_200.png -text
 images/components/tcolordialog.png -text svneol=unset#image/png
 images/components/tcolorlistbox.png -text svneol=unset#image/png
 images/components/tcombobox.png -text svneol=unset#image/png
+images/components/tcombobox_150.png -text
 images/components/tcombobox_200.png -text
 images/components/tcomboboxex.png -text svneol=unset#image/png
 images/components/tcontrolbar.png -text svneol=unset#image/png
@@ -6578,8 +6587,10 @@ images/components/tdbradiogroup.png -text svneol=unset#image/png
 images/components/tdbtext.png -text svneol=unset#image/png
 images/components/tdirectoryedit.png -text svneol=unset#image/png
 images/components/tdrawgrid.png -text svneol=unset#image/png
+images/components/tdrawgrid_150.png -text
 images/components/tdrawgrid_200.png -text
 images/components/tedit.png -text svneol=unset#image/png
+images/components/tedit_150.png -text
 images/components/tedit_200.png -text
 images/components/teditbutton.png -text svneol=unset#image/png
 images/components/teventlog.png -text svneol=unset#image/png
@@ -6602,20 +6613,29 @@ images/components/timagelist.png -text svneol=unset#image/png
 images/components/tinipropstorage.png -text svneol=unset#image/png
 images/components/tjsonpropstorage.png -text svneol=unset#image/png
 images/components/tlabel.png -text svneol=unset#image/png
+images/components/tlabel_150.png -text
 images/components/tlabel_200.png -text
 images/components/tlabelededit.png -text svneol=unset#image/png
+images/components/tlabelededit_150.png -text
 images/components/tlabelededit_200.png -text
 images/components/tlazcomponentqueue.png -text svneol=unset#image/png
 images/components/tlistbox.png -text svneol=unset#image/png
+images/components/tlistbox_150.png -text
+images/components/tlistbox_200.png -text
 images/components/tlistview.png -text svneol=unset#image/png
 images/components/tmainmenu.png -text svneol=unset#image/png
+images/components/tmainmenu_150.png -text
+images/components/tmainmenu_200.png -text
 images/components/tmaskedit.png -text svneol=unset#image/png
 images/components/tmemo.png -text svneol=unset#image/png
+images/components/tmemo_150.png -text
+images/components/tmemo_200.png -text
 images/components/tmouse.png -text svneol=unset#image/png
 images/components/tnotebook.png -text svneol=unset#image/png
 images/components/topendialog.png -text svneol=unset#image/png
 images/components/topenpicturedialog.png -text svneol=unset#image/png
 images/components/tpagecontrol.png -text svneol=unset#image/png
+images/components/tpagecontrol_150.png -text
 images/components/tpagecontrol_200.png -text
 images/components/tpaintbox.png -text svneol=unset#image/png
 images/components/tpairsplitter.png -text svneol=unset#image/png
@@ -6627,11 +6647,14 @@ images/components/tprocess.png -text svneol=unset#image/png
 images/components/tprocessutf8.png -text
 images/components/tprogressbar.png -text svneol=unset#image/png
 images/components/tradiobutton.png -text svneol=unset#image/png
+images/components/tradiobutton_150.png -text
+images/components/tradiobutton_200.png -text
 images/components/tradiogroup.png -text svneol=unset#image/png
 images/components/treplacedialog.png -text svneol=unset#image/png
 images/components/tsavedialog.png -text svneol=unset#image/png
 images/components/tsavepicturedialog.png -text svneol=unset#image/png
 images/components/tscrollbar.png -text svneol=unset#image/png
+images/components/tscrollbar_150.png -text
 images/components/tscrollbar_200.png -text
 images/components/tscrollbox.png -text svneol=unset#image/png
 images/components/tselectdirectorydialog.png -text svneol=unset#image/png
@@ -6645,22 +6668,28 @@ images/components/tspeedbutton.png -text svneol=unset#image/png
 images/components/tspinedit.png -text svneol=unset#image/png
 images/components/tsplitter.png -text svneol=unset#image/png
 images/components/tstatictext.png -text svneol=unset#image/png
+images/components/tstatictext_150.png -text
 images/components/tstatictext_200.png -text
 images/components/tstatusbar.png -text svneol=unset#image/png
 images/components/tstringgrid.png -text svneol=unset#image/png
+images/components/tstringgrid_150.png -text
 images/components/tstringgrid_200.png -text
 images/components/ttabcontrol.png -text svneol=unset#image/png
+images/components/ttabcontrol_150.png -text
 images/components/ttabcontrol_200.png -text
 images/components/ttaskdialog.png -text
 images/components/ttimeedit.png -text svneol=unset#image/png
 images/components/ttimer.png -text svneol=unset#image/png
 images/components/ttogglebox.png -text svneol=unset#image/png
+images/components/ttogglebox_150.png -text
+images/components/ttogglebox_200.png -text
 images/components/ttoolbar.png -text svneol=unset#image/png
 images/components/ttrackbar.png -text svneol=unset#image/png
 images/components/ttrayicon.png -text svneol=unset#image/png
 images/components/ttreeview.png -text svneol=unset#image/png
 images/components/tupdown.png -text svneol=unset#image/png
 images/components/tvaluelisteditor.png -text
+images/components/tvaluelisteditor_150.png -text
 images/components/tvaluelisteditor_200.png -text
 images/components/txmlconfig.png -text svneol=unset#image/png
 images/components/txmlpropstorage.png -text svneol=unset#image/png
