--- a/.gitattributes
+++ b/.gitattributes
@@ -6536,6 +6536,8 @@ images/components/tactionlist_150.png -text
 images/components/tactionlist_200.png -text
 images/components/tapplicationproperties.png -text svneol=unset#image/png
 images/components/tarrow.png -text svneol=unset#image/png
+images/components/tarrow_150.png -text
+images/components/tarrow_200.png -text
 images/components/tasyncprocess.png -text
 images/components/tbevel.png -text svneol=unset#image/png
 images/components/tbitbtn.png -text svneol=unset#image/png
@@ -6557,6 +6559,8 @@ images/components/tcheckbox_150.png -text
 images/components/tcheckbox_200.png -text
 images/components/tcheckcombobox.png -text svneol=unset#image/png
 images/components/tcheckgroup.png -text svneol=unset#image/png
+images/components/tcheckgroup_150.png -text
+images/components/tcheckgroup_200.png -text
 images/components/tchecklistbox.png -text svneol=unset#image/png
 images/components/tcolorbox.png -text svneol=unset#image/png
 images/components/tcolorbox_150.png -text
@@ -6566,6 +6570,8 @@ images/components/tcolorbutton_150.png -text
 images/components/tcolorbutton_200.png -text
 images/components/tcolordialog.png -text svneol=unset#image/png
 images/components/tcolorlistbox.png -text svneol=unset#image/png
+images/components/tcolorlistbox_150.png -text
+images/components/tcolorlistbox_200.png -text
 images/components/tcombobox.png -text svneol=unset#image/png
 images/components/tcombobox_150.png -text
 images/components/tcombobox_200.png -text
@@ -6597,17 +6603,25 @@ images/components/tedit.png -text svneol=unset#image/png
 images/components/tedit_150.png -text
 images/components/tedit_200.png -text
 images/components/teditbutton.png -text svneol=unset#image/png
+images/components/teditbutton_150.png -text
+images/components/teditbutton_200.png -text
 images/components/teventlog.png -text svneol=unset#image/png
 images/components/tfilelistbox.png -text svneol=unset#image/png
 images/components/tfilenameedit.png -text svneol=unset#image/png
 images/components/tfiltercombobox.png -text
 images/components/tfinddialog.png -text svneol=unset#image/png
 images/components/tfloatspinedit.png -text svneol=unset#image/png
+images/components/tfloatspinedit_150.png -text
+images/components/tfloatspinedit_200.png -text
 images/components/tflowpanel.png -text svneol=unset#image/png
 images/components/tfontdialog.png -text svneol=unset#image/png
 images/components/tframe.png -text svneol=unset#image/png
 images/components/tgroupbox.png -text svneol=unset#image/png
+images/components/tgroupbox_150.png -text
+images/components/tgroupbox_200.png -text
 images/components/theadercontrol.png -text svneol=unset#image/png
+images/components/theadercontrol_150.png -text
+images/components/theadercontrol_200.png -text
 images/components/thtmlbrowserhelpviewer.png -text svneol=unset#image/png
 images/components/thtmlhelpdatabase.png -text svneol=unset#image/png
 images/components/tidedialoglayoutstorage.png -text svneol=unset#image/png
@@ -6654,6 +6668,8 @@ images/components/tradiobutton.png -text svneol=unset#image/png
 images/components/tradiobutton_150.png -text
 images/components/tradiobutton_200.png -text
 images/components/tradiogroup.png -text svneol=unset#image/png
+images/components/tradiogroup_150.png -text
+images/components/tradiogroup_200.png -text
 images/components/treplacedialog.png -text svneol=unset#image/png
 images/components/tsavedialog.png -text svneol=unset#image/png
 images/components/tsavepicturedialog.png -text svneol=unset#image/png
@@ -6674,6 +6690,8 @@ images/components/tspeedbutton.png -text svneol=unset#image/png
 images/components/tspeedbutton_150.png -text
 images/components/tspeedbutton_200.png -text
 images/components/tspinedit.png -text svneol=unset#image/png
+images/components/tspinedit_150.png -text
+images/components/tspinedit_200.png -text
 images/components/tsplitter.png -text svneol=unset#image/png
 images/components/tstatictext.png -text svneol=unset#image/png
 images/components/tstatictext_150.png -text
@@ -6696,6 +6714,8 @@ images/components/ttrackbar.png -text svneol=unset#image/png
 images/components/ttrayicon.png -text svneol=unset#image/png
 images/components/ttreeview.png -text svneol=unset#image/png
 images/components/tupdown.png -text svneol=unset#image/png
+images/components/tupdown_150.png -text
+images/components/tupdown_200.png -text
 images/components/tvaluelisteditor.png -text
 images/components/tvaluelisteditor_150.png -text
 images/components/tvaluelisteditor_200.png -text
